Addressing bug 112508 -- incrementing a version constant, r/sr=dp