modules/plugin/base/src/nsPluginHostImpl.cpp
@@ -181,8 +181,8 @@ static const char *kPluginTmpDirName = "plugtmp";
 // Version of cached plugin info
 // 0.01 first implementation
 // 0.02 added caching of CanUnload to fix bug 105935
-static const char *kPluginInfoVersion = "0.02";
-
+// 0.03 changed name, description and mime desc from string to bytes, bug 108246
+static const char *kPluginInfoVersion = "0.03";
 ////////////////////////////////////////////////////////////////////////
 // CID's && IID's
 static NS_DEFINE_IID(kIPluginInstanceIID, NS_IPLUGININSTANCE_IID);
